--- a/index.css
+++ b/index.css
@@ -10,7 +10,6 @@ body{
 a{
   text-decoration: none;
   color: white;
-  font-style: italic;
   padding: 10px 15px;
 }
 ul{
@@ -75,10 +74,33 @@ video{
   
 }
 .headline{
-  position: absolute;
+  position: fixed;
   top: 80%;
   left: 70%;
   color: white;
+}
+
+.proper{
+  width: 200px;
+  height: 200px;
+  background: blue;
+  top: 22%;
+  left: 20%;
+  position: fixed;
+  text-align: center;
+  padding: 15px;
+}
+.proper p{
+  font-size: 20px;
+}
+
+.proper h2{
+  font-size: 30px;
+}
+
+.proper a{
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 /* コンテンツ */
@@ -136,7 +158,7 @@ video{
 .about{
   text-align: center;
   position: relative;
-  height: 2000px;
+  height: 1700px;
   background: #F3F3F3;
 }
 .comment{
@@ -212,7 +234,7 @@ video{
 }
 .feature-container{
   display: flex;
-  margin-left: 80px;
+  margin: 50px 0 100px 150px;
 }
 .f-ele{
   width: 250px;
