--- a/index.css
+++ b/index.css
@@ -83,7 +83,6 @@ video{
 .proper{
   width: 200px;
   height: 200px;
-  background: blue;
   top: 22%;
   left: 20%;
   position: fixed;
@@ -150,7 +149,7 @@ video{
 }
 .about h1::after{
   content: "●";
-  color: #FBF9FA;
+  color: #F3F3F3;
   position: absolute;
   top: 25%;
   right: 20px;
@@ -420,7 +419,7 @@ video{
 }
 .story h1::after{
   content: "●";
-  color: #FBF9FA;
+  color: #F3F3F3;
   position: absolute;
   top: 25%;
   right: 20px;
@@ -538,8 +537,23 @@ video{
   text-align: center;
   background: #f3f3f3;
 }
-.team h1{
+.team h1 {
+  margin: 10px 0 100px 0;
   font-size: 40px;
+  padding: 20px 30px;
+  background: #F0E14C;
+  vertical-align: middle;
+  padding: 20px 100px;/*文字周りの余白*/
+  border-radius: 0 50px 50px 0;
+  display: inline-block;
+  position: relative;
+}
+.team h1::after{
+  content: "●";
+  color: #F3F3F3;
+  position: absolute;
+  top: 25%;
+  right: 20px;
 }
 .to-margin{
   width: 33%;
@@ -594,14 +608,14 @@ video{
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,.5);
+  height: 98%;
+  background-color: #fff;
+  color: #000;
   content: "\ARinkei \Aハードウェア担当";
   font-family: "Font Awesome 5 Free";
   font-weight: 400;
   font-size: 23px;
   opacity: 0;
-  color: #fff;
   display: inline-block;
   white-space: pre;
 }
@@ -610,14 +624,14 @@ video{
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,.5);
+  height: 98%;
   content: "\AWaricoma \Aソフトウェア担当";
   font-family: "Font Awesome 5 Free";
   font-weight: 400;
   font-size: 23px;
   opacity: 0;
-  color: #fff;
+  background-color: #fff;
+  color: #000;
   display: inline-block;
   white-space: pre;
 }
@@ -626,15 +640,15 @@ video{
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,.5);
+  height: 98%;
   content: "\A Anjyu Style \Aデザイナー";
   white-space: pre;
   font-family: "Font Awesome 5 Free";
   font-weight: 400;
   font-size: 23px;
   opacity: 0;
-  color: #fff;
+  background-color: #fff;
+  color: #000;
   display: inline-block;
 }
 .ryuji::before{
@@ -642,15 +656,15 @@ video{
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,.5);
+  height: 98%;
+  background-color: #fff;
+  color: #000;
   content: "\A Ryuji \Aフロントエンド担当";
   white-space: pre;
   font-family: "Font Awesome 5 Free";
   font-weight: 400;
   font-size: 23px;
   opacity: 0;
-  color: #fff;
   display: inline-block;
 }
 .yuri::before{
@@ -658,19 +672,19 @@ video{
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,.5);
+  height: 98%;
+  background-color: #fff;
+  color: #000;
   content: "\A YURI យូរី \Aマネジメント担当";
   white-space: pre;
   font-family: "Font Awesome 5 Free";
   font-weight: 400;
   font-size: 23px;
   opacity: 0;
-  color: #fff;
   display: inline-block;
 }
 .to-margin:hover::before{
-  opacity: 1;
+  opacity: 0.5;
   transition-duration: 0.3s;
 }
 .rinkei{
