--- a/index.css
+++ b/index.css
@@ -10,7 +10,6 @@ body{
 a{
   text-decoration: none;
   color: white;
-  font-style: italic;
   padding: 10px 15px;
 }
 ul{
@@ -60,7 +59,7 @@ video{
   list-style: none;
 }
 #logo{
-  width: 100px;
+  width: 160px;
   height: 100px;
   left: 10px;
 }
@@ -75,10 +74,32 @@ video{
   
 }
 .headline{
-  position: absolute;
+  position: fixed;
   top: 80%;
   left: 70%;
   color: white;
+}
+
+.proper{
+  width: 200px;
+  height: 200px;
+  top: 22%;
+  left: 20%;
+  position: fixed;
+  text-align: center;
+  padding: 15px;
+}
+.proper p{
+  font-size: 20px;
+}
+
+.proper h2{
+  font-size: 30px;
+}
+
+.proper a{
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 /* コンテンツ */
@@ -97,7 +118,7 @@ video{
 }
 .post-it h1{
   padding: 20px 30px;
-  background: #F2E744;
+  background: #F0E14C;
   vertical-align: middle;
   padding: 20px 100px;/*文字周りの余白*/
   border-radius: 0 50px 50px 0;
@@ -119,7 +140,7 @@ video{
   margin: 130px 0 80px 0;
   font-size: 40px;
   padding: 20px 30px;
-  background: #F2E744;
+  background: #F0E14C;
   vertical-align: middle;
   padding: 20px 100px;/*文字周りの余白*/
   border-radius: 0 50px 50px 0;
@@ -128,7 +149,7 @@ video{
 }
 .about h1::after{
   content: "●";
-  color: #FBF9FA;
+  color: #F3F3F3;
   position: absolute;
   top: 25%;
   right: 20px;
@@ -136,12 +157,12 @@ video{
 .about{
   text-align: center;
   position: relative;
-  height: 2000px;
+  height: 1700px;
   background: #F3F3F3;
 }
 .comment{
   display: block;
-  height: 400px
+  height: 400px;
 }
 #com-1{
   width: 200px;
@@ -212,7 +233,7 @@ video{
 }
 .feature-container{
   display: flex;
-  margin-left: 80px;
+  margin: 50px 0 100px 150px;
 }
 .f-ele{
   width: 250px;
@@ -270,7 +291,7 @@ video{
   margin: 100px 0 80px 0;
   font-size: 40px;
   padding: 20px 30px;
-  background: #F2E744;
+  background: #F0E14C;
   vertical-align: middle;
   padding: 20px 100px;/*文字周りの余白*/
   border-radius: 0 50px 50px 0;
@@ -301,7 +322,7 @@ video{
   margin: 0;
 }
 .plan-y{
-  background:#F2E744;
+  background:#F0E14C;
 }
 .plan-details{
   margin: 100px 20px 0 20px;
@@ -326,7 +347,7 @@ video{
 }
 .find{
   text-align: center;
-  margin-top: 20px;
+  margin-top: 50px;
 }
 .find-model{
   color: black;
@@ -342,7 +363,7 @@ video{
 }
 #up{
   position: absolute;
-  background: #F2E744;
+  background: #F0E14C;
   width: 250px;
   height: 3px;
   top: 0;
@@ -350,20 +371,20 @@ video{
 }
 #right{
   position: absolute;
-  background: #F2E744;
+  background: #F0E14C;
   width: 3px;
   height: 20px;
   top: 0;
-  left: 650px;
+  left: 653px;
   transform: skew(135deg);
 }
 #bottom{
   position: absolute;
-  background: #F2E744;
+  background: #F0E14C;
   width: 3px;
   height: 35px;
   top: -15px;
-  left: 640px;
+  left: 643px;
 }
 .attention{
   margin-top: 50px;
@@ -389,7 +410,7 @@ video{
   margin: 100px 0 80px 0;
   font-size: 40px;
   padding: 20px 30px;
-  background: #F2E744;
+  background: #F0E14C;
   vertical-align: middle;
   padding: 20px 100px;/*文字周りの余白*/
   border-radius: 0 50px 50px 0;
@@ -398,7 +419,7 @@ video{
 }
 .story h1::after{
   content: "●";
-  color: #FBF9FA;
+  color: #F3F3F3;
   position: absolute;
   top: 25%;
   right: 20px;
@@ -407,7 +428,7 @@ video{
   display: flex;
 }
 .word{
-  width: 40%;
+  width: 50%;
   padding: 100px 50px;
   margin-left: 50px;
   line-height: 35px;
@@ -415,10 +436,10 @@ video{
   text-align: left;
 }
 .phone img{
-  width: 50%;
+  width: 35%;
 }
 .more a{
-  margin:100px 0 0 100px;
+  margin:100px 0 0 30px;
   color: #333333;
   transition-duration: .5s;
 }
@@ -427,7 +448,7 @@ video{
 }
 #up2{
   position: absolute;
-  background: #F2E744;
+  background: #F0E14C;
   width: 150px;
   height: 3px;
   top: 0;
@@ -435,7 +456,7 @@ video{
 }
 #right2{
   position: absolute;
-  background: #F2E744;
+  background: #F0E14C;
   width: 3px;
   height: 20px;
   top: 0;
@@ -444,7 +465,7 @@ video{
 }
 #bottom2{
   position: absolute;
-  background: #F2E744;
+  background: #F0E14C;
   width: 3px;
   height: 35px;
   top: -15px;
@@ -452,7 +473,7 @@ video{
   
 }
 .phone{
-  margin-top: 150px
+  margin-top: 50px;
 }
 
 /* 使ってみての感想 */
@@ -460,12 +481,13 @@ video{
   text-align: center;
   background: #FBF9FA;
   padding-bottom: 100px;
+  height: 1300px;
 }
 .review h1 {
   margin: 100px 0 80px 0;
   font-size: 40px;
   padding: 20px 30px;
-  background: #F2E744;
+  background: #F0E14C;
   vertical-align: middle;
   padding: 20px 100px;
   border-radius: 0 50px 50px 0;
@@ -485,79 +507,40 @@ video{
 .person1{
   position: absolute;
   top: 0;
-  left: 18%;
+  left: 10%;
 }
-.circle{
+
+.comment1{
   position: absolute;
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  background: #007bff;
-  top: 0;
-  left: 20px;
-}
-.triangle{
-  position: absolute;
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 0 100px 173.2px 100px;
-  border-color: transparent transparent #007bff transparent;
   top: 100px;
-  left: 18%;
+  right: 10%;
 }
-#re-up-com1{
-  width: 300px;
-  height: 150px;
-  padding: 20px;
+.comment1 p{
   position: absolute;
-  background: #fff;
-  border-radius: 25px;
-  top: 10px;
-  left: 500px;
-  filter: drop-shadow(10px 10px 10px rgba(0, 0, 0, .4));
-  text-align: left;
-}
-#re-up-com1::after{
-  position: absolute;
-  content: '';
-  top: 50%;
-  right: 100%;
-  border: 15px solid transparent;
-  border-right: 30px solid #fff;
-  width: 0;
-  height: 0;
+  top: 100px;
+  left: 20%;
 }
 .re-bot{
   position: relative;
 }
 .person2{
   position: absolute;
-  top: 0;
-  right: 40%;
+  top: 500px;
+  right: 10%;
 }
-#re-up-com2{
-  width: 300px;
-  height: 150px;
-  padding: 20px;
+
+.comment2{
   position: absolute;
-  background: #FFF9A4;
-  border-radius: 25px;
-  top: 10px;
-  right: 500px;
-  filter: drop-shadow(10px 10px 10px rgba(0, 0, 0, .4));
-  text-align: left;
+  top: 600px;
+  left: 10%;
 }
-#re-up-com2::after{
+.comment2 p{
   position: absolute;
-  content: '';
-  top: 50%;
-  left: 100%;
-  border: 15px solid transparent;
-  border-left: 30px solid #FFF9A4;
-  width: 0;
-  height: 0;
+  top: 30%;
+  left: 20%;
 }
+
+
 
 /* arrowチーム */
 .team{
@@ -565,8 +548,23 @@ video{
   text-align: center;
   background: #f3f3f3;
 }
-.team h1{
+.team h1 {
+  margin: 10px 0 100px 0;
   font-size: 40px;
+  padding: 20px 30px;
+  background: #F0E14C;
+  vertical-align: middle;
+  padding: 20px 100px;/*文字周りの余白*/
+  border-radius: 0 50px 50px 0;
+  display: inline-block;
+  position: relative;
+}
+.team h1::after{
+  content: "●";
+  color: #F3F3F3;
+  position: absolute;
+  top: 25%;
+  right: 20px;
 }
 .to-margin{
   width: 33%;
@@ -582,7 +580,7 @@ video{
   display: flex;
 }
 .arrow{
-  background:#F2E744;
+  background:#F0E14C;
   padding: 107px 109px;
   width: 13%;
   height: 146px;
@@ -621,14 +619,14 @@ video{
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,.5);
+  height: 98%;
+  background-color: #fff;
+  color: #000;
   content: "\ARinkei \Aハードウェア担当";
   font-family: "Font Awesome 5 Free";
   font-weight: 400;
   font-size: 23px;
   opacity: 0;
-  color: #fff;
   display: inline-block;
   white-space: pre;
 }
@@ -637,14 +635,14 @@ video{
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,.5);
+  height: 98%;
   content: "\AWaricoma \Aソフトウェア担当";
   font-family: "Font Awesome 5 Free";
   font-weight: 400;
   font-size: 23px;
   opacity: 0;
-  color: #fff;
+  background-color: #fff;
+  color: #000;
   display: inline-block;
   white-space: pre;
 }
@@ -653,15 +651,15 @@ video{
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,.5);
+  height: 98%;
   content: "\A Anjyu Style \Aデザイナー";
   white-space: pre;
   font-family: "Font Awesome 5 Free";
   font-weight: 400;
   font-size: 23px;
   opacity: 0;
-  color: #fff;
+  background-color: #fff;
+  color: #000;
   display: inline-block;
 }
 .ryuji::before{
@@ -669,15 +667,15 @@ video{
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,.5);
+  height: 98%;
+  background-color: #fff;
+  color: #000;
   content: "\A Ryuji \Aフロントエンド担当";
   white-space: pre;
   font-family: "Font Awesome 5 Free";
   font-weight: 400;
   font-size: 23px;
   opacity: 0;
-  color: #fff;
   display: inline-block;
 }
 .yuri::before{
@@ -685,19 +683,19 @@ video{
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,.5);
+  height: 98%;
+  background-color: #fff;
+  color: #000;
   content: "\A YURI យូរី \Aマネジメント担当";
   white-space: pre;
   font-family: "Font Awesome 5 Free";
   font-weight: 400;
   font-size: 23px;
   opacity: 0;
-  color: #fff;
   display: inline-block;
 }
 .to-margin:hover::before{
-  opacity: 1;
+  opacity: 0.5;
   transition-duration: 0.3s;
 }
 .rinkei{
@@ -776,7 +774,7 @@ div.yuri ul.icon li:hover {
   margin: 50px;
 }
 #toHome{
-  margin-left: 1100px;
+  margin-left: 1060px;
   color: #333333;
   padding-top: 50px
 }
@@ -853,7 +851,7 @@ button{
   border: 3px solid #F2E744;
   margin-top: 100px;
   width: 70%;
-  margin-left: 200px
+  margin-left: 200px;
   padding-bottom: 50px;
 }
 
@@ -936,7 +934,7 @@ table td {
 }
 
 .footer{
-  background: #F2E744;
+  background: #F0E14C;
   width: 100%;
   margin-top: 80px;
 }
@@ -966,4 +964,150 @@ table td {
 
 .cr{
   margin-left: 100px;
+}
+
+.mk-story{
+  margin: 200px;
+}
+
+.story-1{
+  display: flex;
+}
+#text1{
+  background: #F1E987
+  ;
+  width: 60%;
+  height: 300px;
+  text-align: left;
+  padding: 20px;
+}
+#text1 h3{
+  font-size: 24px;
+  font-weight: lighter;
+  margin: 0;
+  margin-left: 20px
+}
+#text1 p{
+  padding: 20px 20px 0 20px;
+  font-size: 14px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.story-2{
+  display: flex;
+}
+#text2{
+  width: 580px;
+  height: 550px;
+  background: #F1E987;
+}
+#text2 p{
+  margin: 0;
+  text-align: left;
+  padding: 30px;
+}
+
+.story-con img{
+  vertical-align: top;
+}
+
+#text3{
+  background: #F1E987;
+  width: 460px;
+  height: 810px;
+  text-align: left;
+  padding: 30px;
+}
+#text3 h3{
+  font-size: 24px;
+  margin: 0;
+  font-weight: lighter;
+}
+#text3 p{
+  font-size: 14px;
+}
+
+.story-3{
+  display: flex;
+}
+
+.st3-left video{
+  filter: none;
+  vertical-align: top;
+}
+
+
+
+#text4{
+  background: #F1E987;
+  height: 484px;
+  text-align: left;
+  padding: 30px;
+}
+
+#text4 h3{
+  font-size: 24px;
+  font-weight: lighter;
+  margin: 0;
+  margin-left: 20px
+}
+#text4 p{
+  padding: 20px 20px 0 20px;
+  font-size: 14px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.st3-left img{
+  vertical-align: top;
+}
+
+.st3-right img{
+  text-align: left;
+  vertical-align: top;
+}
+
+#story-4{
+  display: flex;
+}
+
+#story-4 video{
+  filter: none;
+  vertical-align: top;
+}
+
+#story-5{
+  display: flex;
+}
+
+#story-5 img{
+  vertical-align: top;
+  filter: none;
+  box-shadow: none;
+}
+
+#story-5 video{
+  filter: none;
+  vertical-align: top;
+}
+
+.st-comment{
+  width: 100%;
+  height: 250px;
+  background: #F1E987;
+  text-align: left;
+}
+.st-comment h3{
+  font-size: 24px;
+  font-weight: lighter;
+  margin: 0;
+  margin-left: 40px;
+  padding-top: 30px;
+}
+.st-comment p{
+  padding: 30px 100px;
+  font-size: 14px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
