--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ html{
 }
 body{
   margin: 0;
-  font-family: "Noto Sans", "Helvetica Neue", sans-serif bold,Arial, Helvetica;
+  font-family: "Noto Sans", "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
 a{
   text-decoration: none;
@@ -54,6 +54,9 @@ video{
   z-index: 1000;
   top: 160px;
   left: 30px;
+}
+#to-post{
+  font-size: 13px;
 }
 .menubar li{
   list-style: none;
@@ -113,7 +116,8 @@ video{
   margin-top: 300px;
   text-align: center;
   z-index: 1000;
-  height: 500px;
+  height: 100%;
+  width: 100%;
   background: #FBF9FA;
 }
 .post-it h1{
@@ -133,6 +137,10 @@ video{
   position: absolute;
   top: 25%;
   right: 20px;
+}
+.manga img{
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
 
 /* スマートポストとは */
@@ -583,7 +591,7 @@ video{
   background:#F0E14C;
   padding: 107px 109px;
   width: 13%;
-  height: 146px;
+  height: 141px;
 }
 .arrow p{
   font-size: 10px;
@@ -849,9 +857,8 @@ button{
 
 .result{
   border: 3px solid #F2E744;
-  margin-top: 100px;
+  margin: 100px auto auto 225px;
   width: 70%;
-  margin-left: 200px;
   padding-bottom: 50px;
 }
 
@@ -966,18 +973,18 @@ table td {
   margin-left: 100px;
 }
 
+/* 制作ストーリー */
 .mk-story{
   margin: 200px;
 }
-
 .story-1{
   display: flex;
+  position: relative;
 }
 #text1{
-  background: #F1E987
-  ;
-  width: 60%;
-  height: 300px;
+  background: #F1E987;
+  width: 100%;
+  height: 435px;
   text-align: left;
   padding: 20px;
 }
@@ -996,10 +1003,11 @@ table td {
 
 .story-2{
   display: flex;
+  position: relative;
 }
 #text2{
   width: 580px;
-  height: 550px;
+  height: 480px;
   background: #F1E987;
 }
 #text2 p{
@@ -1015,9 +1023,9 @@ table td {
 #text3{
   background: #F1E987;
   width: 460px;
-  height: 810px;
+  height: 690px;
   text-align: left;
-  padding: 30px;
+  padding: 30px 30px 50px 30px;
 }
 #text3 h3{
   font-size: 24px;
@@ -1030,6 +1038,7 @@ table td {
 
 .story-3{
   display: flex;
+  position: relative;
 }
 
 .st3-left video{
@@ -1041,7 +1050,7 @@ table td {
 
 #text4{
   background: #F1E987;
-  height: 484px;
+  height: 470px;
   text-align: left;
   padding: 30px;
 }
@@ -1070,6 +1079,7 @@ table td {
 
 #story-4{
   display: flex;
+  position: relative;
 }
 
 #story-4 video{
@@ -1079,6 +1089,7 @@ table td {
 
 #story-5{
   display: flex;
+  position: relative;
 }
 
 #story-5 img{
@@ -1110,4 +1121,65 @@ table td {
   font-size: 14px;
   margin-top: 0;
   margin-bottom: 0;
+}
+.mk-story a{
+  color: #000;
+  text-decoration: underline;
+}
+.mk-story span{
+  font-weight: bold;
+}
+.num{
+  z-index: 500;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #F1E987;
+  text-align:center;
+  line-height: 30px;
+}
+#num1{
+  position: absolute;
+  right: 25px;
+  bottom: 10px;
+}
+#num2{
+  position: absolute;
+  bottom: 480px;
+  left: 10px;
+}
+#num3{
+  position: absolute;
+  top:0;
+  left: 10px;
+}
+#num4{
+  position: absolute;
+  top: 220px;
+  right: 10px;
+}
+#num5{
+  position: absolute;
+  bottom: 0;
+  left: 600px;
+}
+#num6{
+  position: absolute;
+  left: 10px;
+  bottom: 10px;
+}
+#num7{
+  position: absolute;
+  top: 10px;
+  right: 20px;
+}
+#num8{
+  position: absolute;
+  left: 20px;
+  top: 0px;
+}
+#num9{
+  position: absolute;
+  right: 15px;
+  bottom: 0;
 }
