--- a/index.css
+++ b/index.css
@@ -91,6 +91,7 @@ video{
   position: fixed;
   text-align: center;
   padding: 15px;
+  z-index: -800;
 }
 .proper p{
   font-size: 20px;
@@ -660,7 +661,7 @@ video{
   left: 0;
   width: 100%;
   height: 98%;
-  content: "\A Anjyu Style \Aデザイナー";
+  content: "\A Anjyu Style \Aデザイナー担当";
   white-space: pre;
   font-family: "Font Awesome 5 Free";
   font-weight: 400;
@@ -719,6 +720,7 @@ video{
   margin: 40px 20px 0 0;
   opacity: 1;
   color: #fff;
+  margin-bottom: 10px;
 }
 .icon{
   list-style: none;
