--- a/index.css
+++ b/index.css
@@ -40,7 +40,7 @@ video{
 .logomenu img{
   margin: 30px 0 0 50px;
   position: fixed;
-  z-index: 1000;
+  z-index: 2000;
   top: 20px;
 }
 .menubar{
@@ -111,19 +111,19 @@ video{
 .center{
   margin-left: 300px;
   margin-right: 50px;
-  
+  position: relative;
+  z-index: 1000;
 }
 
 /* 漫画 */
 .post-it {
   margin-top: 300px;
   text-align: center;
-  z-index: 1000;
   height: 100%;
   width: 100%;
   background: #FBF9FA;
-  z-index: 1000px;
   position: relative;
+  z-index: 1000;
 }
 .post-it h1{
   padding: 20px 30px;
@@ -146,6 +146,7 @@ video{
 .manga img{
   margin-top: 80px;
   margin-bottom: 80px;
+  position: relative;
 }
 
 /* スマートポストとは */
@@ -172,7 +173,6 @@ video{
   position: relative;
   height: 1700px;
   background: #F3F3F3;
-  z-index: 1000px;
 }
 .comment{
   display: block;
@@ -303,7 +303,6 @@ video{
   background: #FBF9FA;
   padding-bottom: 100px;
   position: relative;
-  z-index: 1000px;
 }
 .price h1 {
   margin: 100px 0 80px 0;
@@ -424,7 +423,6 @@ video{
   text-align: center;
   padding-bottom: 100px;
   position: relative;
-  z-index: 1000px;
 }
 .story h1 {
   margin: 100px 0 80px 0;
@@ -503,7 +501,6 @@ video{
   padding-bottom: 100px;
   height: 1300px;
   position: relative;
-  z-index: 1000px;
 }
 .review h1 {
   margin: 100px 0 80px 0;
@@ -570,7 +567,6 @@ video{
   text-align: center;
   background: #f3f3f3;
   position: relative;
-  z-index: 1000px;
 }
 .team h1 {
   margin: 10px 0 100px 0;
