--- a/index.css
+++ b/index.css
@@ -87,9 +87,9 @@ video{
 .proper{
   width: 200px;
   height: 200px;
-  top: 22%;
+  top: 32%;
   left: 20%;
-  position: fixed;
+  position: absolute;
   text-align: center;
   padding: 15px;
 }
@@ -183,7 +183,7 @@ video{
   position: absolute;
   background: #FFF9A4;
   border-radius: 25px;
-  top: -50px;
+  top: 250px;
   right: 290px;
   filter: drop-shadow(10px 10px 10px rgba(0, 0, 0, .4));
   text-align: left;
@@ -204,8 +204,8 @@ video{
   position: absolute;
   background: #fff;
   border-radius: 25px;
-  top: 100px;
-  left: 300px;
+  top: 400px;
+  left: 550px;
   filter: drop-shadow(10px 10px 10px rgba(0, 0, 0, .4));
   text-align: left;
 }
@@ -225,8 +225,8 @@ video{
   position: absolute;
   background: #FFF9A4;
   border-radius: 25px;
-  top: 230px;
-  right: 300px;
+  top: 530px;
+  right: 290px;
   filter: drop-shadow(10px 10px 10px rgba(0, 0, 0, .4));
   text-align: left;
 }
@@ -979,7 +979,7 @@ table td {
 }
 
 #exp{
-  margin-top: 100px;
+  margin-top: 50px;
 }
 #totop{
   margin-left: 100px;
@@ -989,20 +989,28 @@ table td {
   margin-left: 100px;
 }
 
+
+/* 制作ストーリ- */
 .mk-story{
-  margin: 200px;
+  margin: 50px 200px 200px 200px;
+}
+#story-p{
+  margin-top: 50px;
+}
+.mk-story a{
+  color: #000;
 }
 
 .story-1{
   display: flex;
+  position: relative;
 }
 #text1{
-  background: #F1E987
-  ;
-  width: 60%;
-  height: 300px;
+  background: #F1E987;
+  width: 100%;
+  height: 100%;
   text-align: left;
-  padding: 20px;
+  padding: 30px;
 }
 #text1 h3{
   font-size: 24px;
@@ -1019,10 +1027,11 @@ table td {
 
 .story-2{
   display: flex;
+  position: relative;
 }
 #text2{
   width: 580px;
-  height: 550px;
+  height: 100%;
   background: #F1E987;
 }
 #text2 p{
@@ -1038,7 +1047,7 @@ table td {
 #text3{
   background: #F1E987;
   width: 460px;
-  height: 810px;
+  height: 100%;
   text-align: left;
   padding: 30px;
 }
@@ -1053,6 +1062,7 @@ table td {
 
 .story-3{
   display: flex;
+  position: relative;
 }
 
 .st3-left video{
@@ -1093,6 +1103,7 @@ table td {
 
 #story-4{
   display: flex;
+  position: relative;
 }
 
 #story-4 video{
@@ -1102,6 +1113,7 @@ table td {
 
 #story-5{
   display: flex;
+  position: relative;
 }
 
 #story-5 img{
@@ -1116,7 +1128,8 @@ table td {
 }
 
 .st-comment{
-  width: 100%;
+  position: relative;
+  width: 101.5%;
   height: 250px;
   background: #F1E987;
   text-align: left;
@@ -1133,4 +1146,65 @@ table td {
   font-size: 14px;
   margin-top: 0;
   margin-bottom: 0;
+}
+.mk-story a{
+  color: #000;
+  text-decoration: underline;
+}
+.mk-story span{
+  font-weight: bold;
+}
+.num{
+  z-index: 500;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #F1E987;
+  text-align:center;
+  line-height: 30px;
+}
+#num1{
+  position: absolute;
+  right: 40px;
+  bottom: 0px;
+}
+#num2{
+  position: absolute;
+  top: 230px;
+  left: 10px;
+}
+#num3{
+  position: absolute;
+  left: 10px;
+  top: 0px;
+}
+#num4{
+  position: absolute;
+  top: 200px;
+  right: 10px;
+}
+#num5{
+  position: absolute;
+  bottom: 0px;
+  left: 600px;
+}
+#num6{
+  position: absolute;
+  left: 10px;
+  top: 260px;
+}
+#num7{
+  position: absolute;
+  right: 10px;
+  top: 0px;
+}
+#num8{
+  position: absolute;
+  left: 680px;
+  top: 0px;
+}
+#num9{
+  position: absolute;
+  right: 10px;
+  top: 350px;
 }
